--- a/demo/app/src/main/res/values/strings.xml
+++ b/demo/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="api_key">your loginradius api key</string>
     <string name="site_name">your loginradius sitename</string>
     <string name="verification_url">https://auth.lrcontent.com/mobile/verification/index.html</string>
-    <string name="reset_password_url">your-resetpasswordurl</string>
+    <string name="reset_password_url">https://auth.lrcontent.com/mobile/verification/index.html</string>
     <string name="email_template">your-email-Template</string>
     <string name="app_id">your facebook app_id</string>
     <string name="facebook_native">false</string>
