--- a/demo/app/src/main/res/values/strings.xml
+++ b/demo/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Demo</string>
-    <string name="api_key">your_loginradius_apiKey</string>
-    <string name="site_name">your_loginradius_siteName</string>
-    <string name="verification_url">https://auth.lrcontent.com/mobile/verification/index.html</string>
-    <string name="reset_password_url">https://auth.lrcontent.com/mobile/verification/index.html</string>
-    <string name="email_template">your-email-Template</string>
-    <string name="app_id">your facebook app_id</string>
-    <string name="sms_template">your-sms-template</string>
+<string name="app_name">Demo</string>
+<string name="api_key">your_loginradius_apikey</string>
+<string name="site_name">your_loginradius_sitename</string>
+<string name="verification_url">https://auth.lrcontent.com/mobile/verification/index.html</string>
+<string name="reset_password_url">https://auth.lrcontent.com/mobile/verification/index.html</string>
+<string name="email_template">your-email-Template</string>
+<string name="app_id">your facebook app_id</string>
+<string name="sms_template">your-sms-template</string>
 </resources>
