MFA Push Notification

--- a/demo/app/src/main/res/values/strings.xml
+++ b/demo/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="facebook_app_id">your_facebook app_id</string>
     <string name="facebook_client_token">your_facebook_client_token</string>
     <string name="sms_template">your-sms-template</string>
+
+ <string name="google_app_id">"your_firebase_google_app_id</string>
+ <string name="gcm_defaultSenderId">your_firebase_sender_id</string>
+  <string name="project_id">your_project_id</string>
+ <string name="google_api_key">your_firebase_google_api_key</string>
+
+
 </resources>
